[package]
name = "player_mover"
description = "A Minecraft tool to edit player data and change their position."
version = "1.0.0"
edition = "2021"
authors = ["Lapis256"]

[dependencies]
fastnbt = "2"
flate2 = "1.0"
dialoguer = "0.11.0"
mojang = "0.1.0"
globmatch = "0.3"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "string"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
